<?xml version="1.0"?>
<package format="2">
  <name>flir_one_node</name>
  <version>0.9.0</version>
  <description>The flir_one_node package</description>

  <maintainer email="abernard@todo.todo">abernard</maintainer>
  <maintainer email="aplyer@github">aplyer</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <exec_depend>libusb-1.0</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
